# STDISCM_P4

./: .env.example  .gitignore  GRPC_PROPOSAL.md  Makefile  P4_GRPC_DOCUMENTATION.md  README.md  eslint.config.mjs  package-lock.json  package.json
apps/dashboard/: .env.local.example  .gitignore  package-lock.json  package.json
apps/dashboard/src/app/: page.tsx
apps/dashboard/src/hooks/: use-toggle.ts
apps/server/: .gitignore  package.json  pyproject.toml
apps/server/src/: __init__.py  main.py  metrics_client_subscriber.py  metrics_server.py  subscriber.py
apps/server/src/model/: DataManager.py  LightningModel.py  MNISTDataManager.py  Trainer.py  TrainingLogger.py  main.py
apps/server/src/server/: GrpcServer.py  RetryHandler.py
apps/server/src/server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/server/src/services/: client.py  metrics_client.py  metrics_server.py  (+3 more)
apps/telemetry/: .gitignore  pyproject.toml
backend/: .gitignore  package.json  pyproject.toml  requirements.txt
backend/scripts/: export_mnist_images.py  test_client.py
backend/src/: main.py
backend/src/scripts/: client.py
backend/src/services/: client.py  servicer.py
backend/src/training/: data_module.py  model.py  trainer.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/scripts/: test-client.ts  test-grpc-client.ts
frontend/src/app/: layout.tsx
frontend/src/proto/: metrics.ts  metrics_grpc_pb.js  metrics_pb.js
server/: pyproject.toml
server/src/: main.py
server/src/training/: Trainer.py
src/hooks/: use-toggle.ts
(+31 files in other folders)
