[project]
name = "dashboard-backend"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "grpcio-tools (>=1.76.0,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
